--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,10 @@ rad.json
 *.flf
 #Test results file
 TestResults.xml
+/test_ppt
+/test
+/cmedia_server/.vs
+/cmedia_server/cmedia_server/cmedia_server.vcxproj.user
+/cmedia_server/vsout
+/cmedia_server/lib
+/cmedia_server/bin/x64/Debug
