[任务队列 事件工具类]

--- a/cmedia_server/clib/clib.vcxproj
+++ b/cmedia_server/clib/clib.vcxproj
@@ -146,6 +146,8 @@
     <ClCompile Include="cconfig.cpp" />
     <ClCompile Include="ccrypto.cpp" />
     <ClCompile Include="cdigit2str.cpp" />
+    <ClCompile Include="cevent.cpp" />
+    <ClCompile Include="cevent_loop.cpp" />
     <ClCompile Include="clog.cpp" />
     <ClCompile Include="clog_color.cpp" />
     <ClCompile Include="cmem_pool.cpp" />
@@ -180,6 +182,8 @@
     <ClInclude Include="cconfig.h" />
     <ClInclude Include="ccrypto.h" />
     <ClInclude Include="cdigit2str.h" />
+    <ClInclude Include="cevent.h" />
+    <ClInclude Include="cevent_loop.h" />
     <ClInclude Include="clib_util.h" />
     <ClInclude Include="clog.h" />
     <ClInclude Include="clog_color.h" />
